Re-implement paragliding logic to let client initiate paragliding, implement manual paragliding via item use